added navbar to reactproject

--- a/projects/markdown-previewer.html
+++ b/projects/markdown-previewer.html
@@ -12,6 +12,7 @@
 
     <title>Markdown Previewer</title>
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href="/css/markdown-previewer.css" rel="stylesheet">
     
     <script src="/js/react.min.js"></script>
@@ -23,6 +24,26 @@
   </head>
 
   <body>
+
+      <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <nav class="navbar navbar-inverse" role="navigation">
+                <div class="col-md-12">
+                  <div class="navbar-header" id="n1">
+                    <a class="navbar-brand" href="https://mohtasimtamjeed.github.io/">Home</a>
+                  </div>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li id="n2">
+                      <a href="/projects/weather-app.html">Weather App</a>
+                    </li>
+    
+                  </ul>
+                </div>
+              </nav>
+            </div>
+          </div>
+
 
     <h1 id="title">Markdown Previewer</h1>
     <div id="app">
